--- a/css/nav.css
+++ b/css/nav.css
@@ -83,6 +83,10 @@ article, section {
 }
 
 
+.breadcrumbs-and-extras {
+    background: white;
+}
+
 .breadcrumbs-and-extras > nav {
     float: left;
 }
